--- a/AngularDemos/Views/Demo1.html
+++ b/AngularDemos/Views/Demo1.html
@@ -1,10 +1,11 @@
 ﻿<!DOCTYPE html>
-<html>
-<head>
+<html ng-app="myModule">
+<head >
     <meta charset="utf-8" />
-    <title></title>
+    <script src="../Scripts/angular.min.js"></script>
+    <script src="../AngularControllers/Demo1Controller.js"></script>
 </head>
 <body>
-
+    <div ng-controller="demo1controller">{{message}}</div>    
 </body>
 </html>
