--- a/AngularDemos/Views/Demo2.html
+++ b/AngularDemos/Views/Demo2.html
@@ -1,10 +1,16 @@
 ﻿<!DOCTYPE html>
-<html>
+<html ng-app="M2">
 <head>
     <meta charset="utf-8" />
     <title></title>
+    <script src="../Scripts/angular.min.js"></script>
+    <script src="../AngularControllers/Demo2.js"></script>
 </head>
 <body>
+    <div ng-controller="C2">
+        <img ng-src="{{country.flag}}"/>
+
+    </div>
 
 </body>
 </html>
